website/static/css/coffee-code-ws.css
html {
  font-family: 'Roboto', sans-serif;
  position: relative;
  min-height: 100%;

  scroll-behavior: smooth;
  word-wrap: break-word;
}

#top-nav-bar-input::placeholder {
  color: rgba(255,255,255,.5);
}

#top-nav-bar-input::-ms-input-placeholder {
  color: rgba(255,255,255,.5);
}

.page-nav-container {
  padding-top: 12rem;
  padding-bottom: 18rem;
}

.header-container {
  padding-top: 4rem;
  padding-bottom: 4rem;
  padding-left: 1rem;
  padding-right: 1rem;
  margin-bottom: 2rem;
}

.polygon-top-left {
  background: rgb(241,39,17);
  background: linear-gradient(294deg, rgba(241,39,17,1) 0%, rgba(245,175,25,1) 100%);
  transform: skewY(8deg);
  margin-top: -10rem;
}

.polygon-top-left > * {
  transform: skewY(-8deg);
}

.polygon-top-right {
  background: rgb(0,198,255);
  background: linear-gradient(27deg, rgba(0,198,255,1) 0%, rgba(0,114,255,1) 100%);
  transform: skewY(-8deg);
  margin-top: -12rem;
}

.polygon-top-right > * {
  transform: skewY(0deg);
}

.bg-color-scheme-responsive {
  background-color: #ecf0f1;
}

.text-color-scheme-responsive {
  color: #2f3542;
}

.border-color-scheme-responsive {
  border-color: #2f3542;
}

.codehilite {
  background-color: #f4f8f9;
  border-radius: 0.5rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.codehilite pre {
  overflow: auto;
  padding: 0.5rem;
}

code, .highlighted {
  background-color: #f4f8f9;
  border-radius: 0.5rem;
  padding: 2px;
  color: #007bff;
}

@media (prefers-color-scheme: dark) {
  .bg-color-scheme-responsive {
    background-color: #2f3542;
  }

  .text-color-scheme-responsive {
    color: #ecf0f1;
  }

  .border-color-scheme-responsive {
    border-color: #ecf0f1;
  }

  .codehilite {
    background-color: #272d3a;
  }

  code, .highlighted {
    background-color: #272d3a;
    color: #007bff;
  }

}

.polygon-bottom-left {
  background: rgb(241,39,17);
  background: linear-gradient(294deg, rgba(241,39,17,1) 0%, rgba(245,175,25,1) 100%);
  clip-path: polygon(100% 100%, 0 100%, 0 50%,100% 0);
  -webkit-clip-path: polygon(100% 100%, 0 100%, 0 50%,100% 0);
  position: relative;
}

.polygon-bottom-right {
  background: rgb(0,198,255);
  background: linear-gradient(27deg, rgba(0,198,255,1) 0%, rgba(0,114,255,1) 100%);
  clip-path: polygon(100% 100%, 0 100%,0 0, 100% 80%);
  -webkit-clip-path: polygon(100% 100%, 0 100%,0 0, 100% 80%);
  position: relative;
}

@media (min-width: 1200px) {
  .container{
    max-width: 800px;
  }
}

.justify {
  text-align: justify;
  text-justify: inter-word;
}

.markdown > p {
  margin-top: 2rem;
  text-align: justify;
  text-justify: inter-word;
}

.markdown > h1 {
  margin-top: 6rem;
  background: linear-gradient(294deg, rgba(241,39,17,1) 0%, rgba(245,175,25,1) 100%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.markdown > h2 {
  margin-top: 4rem;
  background: linear-gradient(294deg, rgba(241,39,17,1) 0%, rgba(245,175,25,1) 100%);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.markdown > h3 {
  margin-top: 2rem;
}

.markdown img {
  max-width: 100%;
  margin-top: 4rem;
  margin-bottom: 4rem;
  display: block;
  margin-left: auto;
  margin-right: auto;
  background-color: white;
  border-radius: 0.5rem;
}

.markdown img, .markdown .codehilite {
  box-shadow: 0 10px 20px rgba(0,0,0,0.05), 0 6px 6px rgba(0,0,0,0.01);
  transition: all 0.5s cubic-bezier(.25,.8,.25,1);
}

.markdown img:hover, .markdown .codehilite:hover {
  box-shadow: 0 19px 38px rgba(0,0,0,0.15), 0 15px 12px rgba(0,0,0,0.05);
}

